--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 async-stream = "0.3.3"
 async-trait = "0.1.58"
+bytes = "1.3.0"
 chrono = "0.4.23"
 clap = { version = "4.0.26", features = ["wrap_help"] }
 comrak = "0.15.0"
@@ -13,7 +14,7 @@ eyre = "0.6.8"
 futures = "0.3.25"
 include_dir = "0.7.3"
 pin-project = "1.0.12"
-reqwest = { version = "0.11.13", features = ["deflate", "gzip", "brotli"] }
+reqwest = { version = "0.11.13", features = ["deflate", "gzip", "brotli", "stream"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 sqlx = { version = "0.6.2", features = ["offline", "sqlite", "json", "uuid", "chrono", "runtime-tokio-native-tls"] }
