--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ async-stream = "0.3.3"
 async-trait = "0.1.58"
 bytes = "1.3.0"
 chrono = "0.4.23"
-clap = { version = "4.0.26", features = ["wrap_help"] }
 comrak = "0.15.0"
 eyre = "0.6.8"
 futures = "0.3.25"
@@ -19,3 +18,6 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 sqlx = { version = "0.6.2", features = ["offline", "sqlite", "json", "uuid", "chrono", "runtime-tokio-native-tls"] }
 tokio = { version = "1.21.2", features = ["macros", "net", "rt"] }
+
+[workspace]
+members = ["bins/*"]
