--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 async-stream = "0.3.3"
 async-trait = "0.1.58"
 bytes = "1.3.0"
-chrono = "0.4.23"
+chrono = { version = "0.4.23", features = ["serde"] }
 clap = "4.0.29"
 comrak = "0.15.0"
 eyre = "0.6.8"
@@ -19,7 +19,9 @@ reqwest = { version = "0.11.13", features = ["deflate", "gzip", "brotli", "strea
 scraper = "0.13.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
+slugify = "0.1.0"
 sqlx = { version = "0.6.2", features = ["offline", "sqlite", "json", "uuid", "chrono", "runtime-tokio-native-tls"] }
 tendril = "0.4.3"
 tokio = { version = "1.21.2", features = ["macros", "net", "rt"] }
+toml = "0.5.9"
 url = "2.3.1"
