--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytes = "1.3.0"
 chrono = { version = "0.4.23", features = ["serde"] }
 clap = "4.0.29"
 comrak = "0.15.0"
+dirs = "4.0.0"
 eyre = "0.6.8"
 futures = "0.3.25"
 html5ever = "0.26.0"
