--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ eyre = "0.6.8"
 futures = "0.3.25"
 html5ever = "0.26.0"
 include_dir = "0.7.3"
+itertools = "0.10.5"
 pin-project = "1.0.12"
 reqwest = { version = "0.11.13", features = ["deflate", "gzip", "brotli", "stream"] }
 scraper = "0.13.0"
