--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ tendril = "0.4.3"
 tokio = { version = "1.21.2", features = ["macros", "net", "rt"] }
 toml = "0.5.9"
 url = { version = "2.3.1", features = ["serde"] }
+zstd = "0.12.3"
