--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ html2text = "0.6.0"
 html5ever = "0.26.0"
 include_dir = "0.7.3"
 itertools = "0.10.5"
+pdf-extract = { git = "https://github.com/joepio/pdf-extract", rev = "33767ee434fb2dc26de0c4de41def45efeb444f5", version = "0.7.0" }
 pin-project = "1.0.12"
 reqwest = { version = "0.11.13", features = ["deflate", "gzip", "brotli", "stream"] }
 scraper = "0.13.0"
