--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,12 @@ futures = "0.3.25"
 html2text = "0.6.0"
 html5ever = "0.26.0"
 include_dir = "0.7.3"
+indoc = "2.0.1"
 itertools = "0.10.5"
+llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
 pdf-extract = { git = "https://github.com/joepio/pdf-extract", rev = "33767ee434fb2dc26de0c4de41def45efeb444f5", version = "0.7.0" }
 pin-project = "1.0.12"
+rand = "0.8.5"
 reqwest = { version = "0.11.13", features = ["deflate", "gzip", "brotli", "stream"] }
 scraper = "0.13.0"
 serde = { version = "1.0.147", features = ["derive"] }
