--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 async-stream = "0.3.3"
 async-trait = "0.1.58"
 bytes = "1.3.0"
+cacache = { version = "11.6.0", default-features = false, features = ["tokio", "tokio-runtime", "memmap2", "mmap", "libc"] }
 chrono = { version = "0.4.23", features = ["serde"] }
 clap = "4.0.29"
 comrak = "0.15.0"
@@ -26,6 +27,7 @@ reqwest = { version = "0.11.13", features = ["deflate", "gzip", "brotli", "strea
 scraper = "0.13.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
+slug = "0.1.4"
 slugify = "0.1.0"
 sqlx = { version = "0.6.2", features = ["offline", "sqlite", "json", "uuid", "chrono", "runtime-tokio-native-tls"] }
 tendril = "0.4.3"
